--- a/example/.gitignore
+++ b/example/.gitignore
@@ -42,3 +42,7 @@ yarn-error.*
 
 # expo-air local config (tunnel URLs)
 .expo-air.local.json
+
+# expo-air runtime files
+.expo-air-metro.log
+.expo-air-images/
